Partly revert https://codereview.chromium.org/1860273003/ where paint follows

Restored updateLifecycleToCompositingCleanPlusScrolling() to
updateAllLifecyclePhases() where paint follows, because some paint
code may depend on the result of lifecycle phases between
CompositingUpdateClean and InPaint. For example, we update
table collapsed borders and layer empty phase information during
paint invalidtion, which are needed by paint.

BUG=602961,591468,603230

Review URL: https://codereview.chromium.org/1890603002

Cr-Commit-Position: refs/heads/master@{#387178}

Former-commit-id: f07d9b4a2ebb30cb77d3cca7d59e1f3c674e81eb