third_party/WebKit/Source/core/svg/graphics/SVGImage.cpp
@@ -358,7 +358,8 @@ void SVGImage::drawInternal(SkCanvas* canvas, const SkPaint& paint, const FloatR
         transform.scale(scale.width(), scale.height());
         TransformRecorder transformRecorder(imagePicture.context(), *this, transform);
 
-        view->updateLifecycleToCompositingCleanPlusScrolling();
+        // TODO(crbug.com/603230): Synchronized painting is unnecessary in this lifecycle update.
+        view->updateAllLifecyclePhases();
         view->paint(imagePicture.context(), CullRect(enclosingIntRect(srcRect)));
         ASSERT(!view->needsLayout());
     }
